--- a/thelayoff-scrape.ipynb
+++ b/thelayoff-scrape.ipynb
@@ -84,29 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 136,
    "id": "42f4d195-ad70-401a-a2fd-aedc165aeda1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "202\n",
-      "b''\n",
-      "Server: nginx\n",
-      "Date: Fri, 08 Nov 2024 02:29:28 GMT\n",
-      "Content-Length: 0\n",
-      "Connection: close\n",
-      "X-Message-Id: hsGI7kVtQPGV8jLCZxHDyA\n",
-      "Access-Control-Allow-Origin: https://sendgrid.api-docs.io\n",
-      "Access-Control-Allow-Methods: POST\n",
-      "Access-Control-Allow-Headers: Authorization, Content-Type, On-behalf-of, x-sg-elas-acl\n",
-      "Access-Control-Max-Age: 600\n",
-      "X-No-CORS-Reason: https://sendgrid.com/docs/Classroom/Basics/API/cors.html\n",
-      "Strict-Transport-Security: max-age=600; includeSubDomains\n",
-      "\n",
-      "\n"
+     "ename": "UnauthorizedError",
+     "evalue": "HTTP Error 401: Unauthorized",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnauthorizedError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[136], line 18\u001b[0m\n\u001b[1;32m     11\u001b[0m message \u001b[38;5;241m=\u001b[39m Mail(\n\u001b[1;32m     12\u001b[0m     from_email\u001b[38;5;241m=\u001b[39mADDRESS,\n\u001b[1;32m     13\u001b[0m     to_emails\u001b[38;5;241m=\u001b[39mADDRESS,\n\u001b[1;32m     14\u001b[0m     subject\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest email with new key api-2\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     15\u001b[0m     html_content\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmy head will explode\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     17\u001b[0m sg \u001b[38;5;241m=\u001b[39m SendGridAPIClient(API_KEY)\n\u001b[0;32m---> 18\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43msg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmessage\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(response\u001b[38;5;241m.\u001b[39mstatus_code)\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(response\u001b[38;5;241m.\u001b[39mbody)\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.8.10/lib/python3.8/site-packages/sendgrid/base_interface.py:63\u001b[0m, in \u001b[0;36mBaseInterface.send\u001b[0;34m(self, message)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(message, \u001b[38;5;28mdict\u001b[39m):\n\u001b[1;32m     61\u001b[0m     message \u001b[38;5;241m=\u001b[39m message\u001b[38;5;241m.\u001b[39mget()\n\u001b[0;32m---> 63\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmail\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpost\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrequest_body\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmessage\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.8.10/lib/python3.8/site-packages/python_http_client/client.py:277\u001b[0m, in \u001b[0;36mClient.__getattr__.<locals>.http_request\u001b[0;34m(request_body, query_params, request_headers, timeout, **_)\u001b[0m\n\u001b[1;32m    271\u001b[0m     _logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPAYLOAD: \u001b[39m\u001b[38;5;132;01m{data}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m    272\u001b[0m         data\u001b[38;5;241m=\u001b[39mrequest\u001b[38;5;241m.\u001b[39mdata))\n\u001b[1;32m    273\u001b[0m _logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHEADERS: \u001b[39m\u001b[38;5;132;01m{headers}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m    274\u001b[0m     headers\u001b[38;5;241m=\u001b[39mrequest\u001b[38;5;241m.\u001b[39mheaders))\n\u001b[1;32m    276\u001b[0m response \u001b[38;5;241m=\u001b[39m Response(\n\u001b[0;32m--> 277\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_request\u001b[49m\u001b[43m(\u001b[49m\u001b[43mopener\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrequest\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    278\u001b[0m )\n\u001b[1;32m    280\u001b[0m _logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{method}\u001b[39;00m\u001b[38;5;124m Response: \u001b[39m\u001b[38;5;132;01m{status}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{body}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m    281\u001b[0m     method\u001b[38;5;241m=\u001b[39mmethod,\n\u001b[1;32m    282\u001b[0m     status\u001b[38;5;241m=\u001b[39mresponse\u001b[38;5;241m.\u001b[39mstatus_code,\n\u001b[1;32m    283\u001b[0m     body\u001b[38;5;241m=\u001b[39mresponse\u001b[38;5;241m.\u001b[39mbody))\n\u001b[1;32m    285\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.8.10/lib/python3.8/site-packages/python_http_client/client.py:184\u001b[0m, in \u001b[0;36mClient._make_request\u001b[0;34m(self, opener, request, timeout)\u001b[0m\n\u001b[1;32m    179\u001b[0m exc\u001b[38;5;241m.\u001b[39m__cause__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    180\u001b[0m _logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{method}\u001b[39;00m\u001b[38;5;124m Response: \u001b[39m\u001b[38;5;132;01m{status}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{body}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m    181\u001b[0m     method\u001b[38;5;241m=\u001b[39mrequest\u001b[38;5;241m.\u001b[39mget_method(),\n\u001b[1;32m    182\u001b[0m     status\u001b[38;5;241m=\u001b[39mexc\u001b[38;5;241m.\u001b[39mstatus_code,\n\u001b[1;32m    183\u001b[0m     body\u001b[38;5;241m=\u001b[39mexc\u001b[38;5;241m.\u001b[39mbody))\n\u001b[0;32m--> 184\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exc\n",
+      "\u001b[0;31mUnauthorizedError\u001b[0m: HTTP Error 401: Unauthorized"
      ]
     }
    ],
@@ -124,9 +119,94 @@
     "message = Mail(\n",
     "    from_email=ADDRESS,\n",
     "    to_emails=ADDRESS,\n",
-    "    subject='test email api-2',\n",
+    "    subject='test email with new key api-2',\n",
     "    html_content='my head will explode')\n",
     "\n",
+    "sg = SendGridAPIClient(API_KEY)\n",
+    "response = sg.send(message)\n",
+    "print(response.status_code)\n",
+    "print(response.body)\n",
+    "print(response.headers)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "928b6f27-9795-4883-a892-ad823894aa2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HTTP Error 401: Unauthorized\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "from sendgrid import SendGridAPIClient\n",
+    "from sendgrid.helpers.mail import Mail\n",
+    "\n",
+    "load_dotenv()\n",
+    "API_KEY=os.getenv('API_KEY')\n",
+    "ADDRESS=os.getenv('ADDRESS')\n",
+    "\n",
+    "message = Mail(\n",
+    "    from_email=ADDRESS,\n",
+    "    to_emails=ADDRESS,\n",
+    "    subject='check this out',\n",
+    "    html_content='<strong>did it fucking work</strong>')\n",
+    "try:\n",
+    "    sg = SendGridAPIClient(API_KEY)\n",
+    "    response = sg.send(message)\n",
+    "    print(response.status_code)\n",
+    "    print(response.body)\n",
+    "    print(response.headers)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "30d48f86-ea25-4a01-bbc2-6bd0b1191a55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!echo \"export SENDGRID_API_KEY='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'\" > sendgrid.env\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "e4a15128-f710-4b8b-af17-5061345d553a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!echo \"sendgrid.env\" >> .gitignore\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "51883fc2-7124-4933-8aef-31042c907621",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!source ./sendgrid.env"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a59452a6-3640-42aa-8b06-78fe209596b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open('updated_posts.csv', 'rb') as f:\n",
     "    data = f.read()\n",
     "    f.close()\n",
@@ -147,8 +227,7 @@
     "    print(response.body)\n",
     "    print(response.headers)\n",
     "except Exception as e:\n",
-    "    print(e)\n",
-    "\n"
+    "    print(e)"
    ]
   }
  ],
